# gimp-sharp

./: .gitignore  AUTHORS  ChangeLog  Display.cs  Drawable.cs  GimpColorButton.cs  GimpEnums.cs  GimpFrame.cs  GimpTable.cs  GimpTypes.cs  INSTALL  Image.cs  Layer.cs  MS-OneByOneShape.cs  MS-ShapeDescription.cs  Makefile  Makefile.am  Makefile.in  Ministeck  Ministeck.cs  NEWS  PP-Layout.cs  PP-LayoutSet.cs  PP-Rectangle.cs  PP-RectangleSet.cs  PP-preview.cs  Palette.cs  PicturePackage  PicturePackage.cs  PixelRgn.cs  Plugin.cs  README  README.md  RandomSeed.cs  RgnIterator.cs  SaveAttribute.cs  ScaleEntry.cs  TODO  TestPlugin.cs  aclocal.m4  (+7 more)
java/sample_plugin/: JAverageBlur  JAverageBlur.java  Makefile.am  README
java/stubs/: Makefile.am
lib/: AspectPreview.cs  AssemblyInfo.cs  BaseRenderer.cs  BoolMatrix.cs  Brush.cs  BrushInfo.cs  BrushList.cs  Buffer.cs  ByColorSelectTool.cs  CMYK.cs  Channel.cs  ChannelList.cs  Context.cs  Coordinate.cs  CoordinateGenerator.cs  CoordinateList.cs  DataObject.cs  DataObjectList.cs  Dimensions.cs  Display.cs  DoubleOffset.cs  Drawable.cs  DrawableComboBox.cs  DrawableList.cs  DrawablePreview.cs  EllipseSelectTool.cs  FileEntry.cs  FilePlugin.cs  FloatingSelection.cs  FontHinting.cs  FontSize.cs  FreeSelectTool.cs  FuzzySelectTool.cs  Gimp.cs  GimpBaseEnums.cs  GimpCheckButton.cs  GimpColorButton.cs  GimpComboBox.cs  GimpDialog.cs  GimpDialogWithPreview.cs  (+96 more)
plug-ins/: Makefile.am  Makefile.in
plug-ins/AverageBlur/: AverageBlur  AverageBlur.cs  Makefile.am
plug-ins/BooSample/: BooSample  BooSample.b  BooSample.boo  Makefile.am
plug-ins/Colorize/: Colorize  Colorize.cs  Colorize.exe.config  Makefile.am  UmfPack.cs  umfpackwrapper.c
plug-ins/CountTool/: CountTool  CountTool.cs  Dialog.cs  Makefile.am  Preview.cs
plug-ins/DifferenceClouds/: Dialog.cs  DifferenceClouds  DifferenceClouds.cs  IndexedColorsMap.cs  Makefile.am  Renderer.cs
plug-ins/FSharpSample/: FSharpSample  FSharpSample.fs  Makefile.am
plug-ins/Forge/: AspectPreviewUpdater.cs  Complex.cs  ComplexMatrix.cs  Dialog.cs  DrawableUpdater.cs  Forge  Forge.cs  FourierTransform.cs  GaussDistribution.cs  IUpdater.cs  Land.cs  Makefile.am  Mesh.cs  Pixel.cs  Planet.cs  Renderer.cs  SpectralSynthesis.cs  StarFactory.cs
plug-ins/Fragment/: Fragment  Fragment.cs  Makefile.am
plug-ins/GemImg/: GemImg  GemImg.cs  Makefile.am
plug-ins/GeneticDrawing/: GeneticDrawing  GeneticDrawing.cs  Makefile.am
plug-ins/JavaFX/: Dialog.cs  JavaFX  JavaFX.cs  Makefile.am  ZipWriter.cs
plug-ins/KoalaPaint/: KoalaPaint  KoalaPaint.cs  Makefile.am
plug-ins/Mezzotint/: Dialog.cs  Makefile.am  Mezzotint  Mezzotint.cs  Renderer.cs
plug-ins/Ministeck/: Coordinate.cs  CornerShape.cs  Dialog.cs  MS-CornerShape.cs  MS-ShapeSet.cs  MS-ThreeByOneShape.cs  MS-TwoByOneShape.cs  Makefile.am  Makefile.in  Ministeck.cs  Ministeck.gpl  MinisteckDialog.cs  MinisteckPalette.cs  OneByOneShape.cs  Painter.cs  Renderer.cs  Shape.cs  ShapeDescription.cs  ShapeDescriptionSet.cs  ShapeSet.cs  ThreeByOneShape.cs  TwoByOneShape.cs  TwoByTwoShape.cs
plug-ins/NemerleSample/: Makefile.am  NemerleSample  NemerleSample.n
plug-ins/OxygeneSample/: Makefile.am  OxygeneSample  OxygeneSample.pas
plug-ins/Pdn/: Makefile.am  Pdn  Pdn.cs
plug-ins/PhotoshopActions/: Abbreviations.cs  AccentedEdgesEvent.cs  Action.cs  ActionEvent.cs  ActionParser.cs  ActionSet.cs  AdaptCorrectEvent.cs  AddAdjustmentLayerEvent.cs  AddEvent.cs  AddGuideEvent.cs  AddLayerEvent.cs  AddMaskEvent.cs  AddNoiseEvent.cs  AddTextLayerEvent.cs  AddToEvent.cs  AliasParameter.cs  AlignEvent.cs  AngledStrokesEvent.cs  ApplyImageEvent.cs  ApplyStyleEvent.cs  AverageEvent.cs  BasReliefEvent.cs  BlurEvent.cs  BlurMethodEvent.cs  BoolParameter.cs  BorderEvent.cs  BrightnessEvent.cs  CanvasSizeEvent.cs  ChalkCharcoalEvent.cs  ChannelMixerEvent.cs  CharcoalEvent.cs  ChromeEvent.cs  ClassType.cs  ClearEffectsEvent.cs  ClearEvent.cs  ClearQuickMaskEvent.cs  CloseEvent.cs  CloudsEvent.cs  ColorBalanceEvent.cs  ColorHalftoneEvent.cs  (+281 more)
plug-ins/PictureFrame/: Dialog.cs  Makefile.am  PictureFrame  PictureFrame.cs  Renderer.cs
plug-ins/PicturePackage/: Dialog.cs  DirImageProviderFactory.cs  DocumentFrame.cs  Enums.cs  FileImageProvider.cs  FileImageProviderFactory.cs  FrontImageProvider.cs  FrontImageProviderFactory.cs  ImageProvider.cs  ImageRenderer.cs  LabelFrame.cs  Layout.cs  LayoutSet.cs  Makefile.am  Makefile.in  PP-LayoutSet.cs  PageSize.cs  PageSizeSet.cs  Painter.cs  ParentRenderer.cs  PicturePackage  PicturePackage.cs  PicturePackageFrame.cs  Preview.cs  PreviewRenderer.cs  ProviderFactory.cs  Rectangle.cs  RectangleSet.cs  Renderer.cs  SourceFrame.cs  XmlNodeListExtensions.cs  picture-package.xml
plug-ins/Pointillize/: ColorCoordinate.cs  ColorCoordinateSet.cs  Dialog.cs  Makefile.am  Pointillize  Pointillize.cs  RandomCoordinateGenerator.cs  Renderer.cs
plug-ins/PythonSample/: Makefile.am  PythonSample  PythonSample.py
plug-ins/QR/: Dialog.cs  Makefile.am  QR  QR.cs  QRDialog.cs  Renderer.cs
plug-ins/Raindrops/: BoolMatrix.cs  CoordinateGenerator.cs  Dialog.cs  IntCoordinate.cs  Makefile.am  Raindrop.cs  RaindropFactory.cs  Raindrops  Raindrops.cs  Renderer.cs
plug-ins/RedEye/: Makefile.am  RedEye  RedEye.cs
plug-ins/ScalaSample/: Makefile.am  ScalaSample  ScalaSample.scala
plug-ins/ShapeCollage/: Dialog.cs  Makefile.am  ShapeCollage  ShapeCollage.cs
plug-ins/Shatter/: Coord.cs  Dialog.cs  Makefile.am  Renderer.cs  Shard.cs  ShardSet.cs  Shatter  Shatter.cs
plug-ins/Sky/: Dialog.cs  Makefile.am  Octave.cs  Perlin3D.cs  Renderer.cs  Sky  Sky.cs  TMatrix.cs  TRandom.cs
plug-ins/SliceTool/: CellPropertiesFrame.cs  CoordinatesDisplay.cs  CreateFunc.cs  CreateTableFunc.cs  Dialog.cs  FileExistsDialog.cs  Format.cs  HorizontalSlice.cs  JavaScriptProperty.cs  LoadSettingsButton.cs  Makefile.am  Makefile.am~  MouseFunc.cs  MoveSliceFunc.cs  PreferencesButton.cs  PreferencesDialog.cs  Preview.cs  PreviewRenderer.cs  Property.cs  PropertySet.cs  Rectangle.cs  RectangleSet.cs  RemoveFunc.cs  RolloverDialog.cs  RolloverEntry.cs  SelectFunc.cs  (+12 more)
(+267 files in other folders)
