## Process this file with automake to produce Makefile.in

if BUILD_BOO
BooSample = BooSample
endif

if BUILD_COLORIZE
Colorize = Colorize
endif

if BUILD_ECW
ecw = ecw
endif

if BUILD_INCOMPLETE
CountTool = CountTool
Mezzotint = Mezzotint
Shatter = Shatter
DifferenceClouds = DifferenceClouds
PictureFrame = PictureFrame
endif

if BUILD_IRONPYTHON
PythonSample = PythonSample
endif

if BUILD_NEMERLE
NemerleSample = NemerleSample
endif

if BUILD_PDN
Pdn = Pdn
endif

if BUILD_UNITTEST
UnitTest = UnitTest
endif

if BUILD_VISUALBASIC
VisualBasicSample = VisualBasicSample
endif

AUTOMAKE_OPTIONS = gnu
SUBDIRS = 			\
	AverageBlur		\
	$(BooSample)		\
	$(Colorize)		\
	$(CountTool)		\
	$(DifferenceClouds)	\
	$(ecw)			\
	Forge	 		\
	Fragment		\
	KoalaPaint 		\
	$(Mezzotint)		\
	Ministeck		\
	ncp 			\
	neo			\
	$(NemerleSample)	\
	$(Pdn)			\
	PhotoshopActions	\
	$(PictureFrame)		\
	PicturePackage 		\
	Pointillize		\
	$(PythonSample)		\
	Raindrops		\
	$(Shatter)		\
	SliceTool 		\
	Splitter 		\
	Swirlies 		\
	$(UnitTest) 		\
	UpdateCheck		\
	$(VisualBasicSample)	\
	wbmp


