## Process this file with automake to produce Makefile.in

if BUILD_BOO
BooSample = BooSample
endif

if BUILD_COLORIZE
Colorize = Colorize
endif

if BUILD_ECW
ecw = ecw
endif

if BUILD_FSHARP
FSharpSample = FSharpSample
endif

if BUILD_INCOMPLETE
CountTool = CountTool
Mezzotint = Mezzotint
Shatter = Shatter
DifferenceClouds = DifferenceClouds
PictureFrame = PictureFrame
endif

if BUILD_IRONPYTHON
PythonSample = PythonSample
endif

if BUILD_NEMERLE
NemerleSample = NemerleSample
endif

if BUILD_OXYGENE
OxygeneSample = OxygeneSample
endif

if BUILD_PDN
Pdn = Pdn
endif

if BUILD_SCALA
ScalaSample = ScalaSample
endif

if BUILD_UNITTEST
UnitTest = UnitTest
endif

if BUILD_VISUALBASIC
VisualBasicSample = VisualBasicSample
endif

AUTOMAKE_OPTIONS = gnu
SUBDIRS = 			\
	AverageBlur		\
	$(BooSample)		\
	$(Colorize)		\
	$(CountTool)		\
	$(DifferenceClouds)	\
	$(ecw)			\
	Forge	 		\
	Fragment		\
	$(FSharpSample)		\
	GemImg			\
	JavaFX			\
	KoalaPaint 		\
	$(Mezzotint)		\
	Ministeck		\
	ncp 			\
	neo			\
	$(NemerleSample)	\
	$(OxygeneSample)	\
	$(Pdn)			\
	PhotoshopActions	\
	$(PictureFrame)		\
	PicturePackage 		\
	Pointillize		\
	$(PythonSample)		\
	QR			\
	Raindrops		\
	$(ScalaSample)		\
	$(Shatter)		\
	Sky			\
	SliceTool 		\
	Splitter 		\
	Swirlies 		\
	Trim			\
	$(UnitTest) 		\
	UpdateCheck		\
	$(VisualBasicSample)	\
	wbmp


